# human-music

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-macos.yml
data/example_1/כל מה .band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
data/example_1/כל מה .band/Resources/: ProjectInformation.plist
data/example_2/השיר הלbm.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
data/example_2/השיר הלbm.band/Resources/: ProjectInformation.plist
data/example_3/nobodys_listening_anyway.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
data/example_3/nobodys_listening_anyway.band/Alternatives/000/Autosave/: 2026-06-21 16:34:20Z.displayData  2026-06-21 16:34:20Z.eventData  2026-06-21 16:34:20Z.songData
data/example_3/nobodys_listening_anyway.band/Resources/: ProjectInformation.plist
project/: README.md  running_spec.md
project/experiments/: gb-verify-cross-project-matrix.md  gb-verify-three-example-crossval.md
project/scripts/: benchmark_verify.py
src/: README.md
src/app/: README.md  package.json
src/app/src/: index.html  main.js  styles.css
src/app/src-tauri/: Cargo.toml  tauri.conf.json
src/app/src-tauri/capabilities/: default.json
src/app/src-tauri/src/: lib.rs  main.rs
src/daw_interfaces/: README.md
src/daw_interfaces/garageband/: Cargo.toml
src/daw_interfaces/garageband/src/: lib.rs  metadata.rs  scanner.rs
src/shazam_engine/: Cargo.toml
src/shazam_engine/src/: audio.rs  cache.rs  fingerprint.rs  lib.rs  main.rs  match_.rs
src/verification_engine/: Cargo.toml
src/verification_engine/config/: default.toml
src/verification_engine/src/: audio.rs  catalog.rs  chroma.rs  config.rs  coverage.rs  discrimination.rs  fingerprints.rs  lib.rs  main.rs  matcher.rs  normalize.rs  progress.rs  project_features.rs  report.rs  verdict.rs  waveform.rs
