[package]
name = "garageband"
version.workspace = true
edition.workspace = true
description = "GarageBand .band bundle scanner and metadata"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
